--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -17,10 +17,16 @@ h1,h2 {
 h1 {
 	font-size: 24px;
 	padding-bottom: 40px;
+	@media only screen and (max-height: 750px) {
+		padding-bottom: 20px;
+	}
 }
 h2 {
 	font-size: 18px;
 	padding-top: 30px;
+	@media only screen and (max-height: 750px) {
+		padding-top: 20px;
+	}
 }
 p {
 	font-weight: normal;
